--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.5.2",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
@@ -46,6 +45,7 @@
   "devDependencies": {
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
   }
 }
