--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "^3.3.3",
-    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+    "sass": "^1.68.0",
+    "tailwindcss": "^3.3.3"
   }
 }
