--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
