--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.3.7",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
